# atari-fw

./: .gitignore  README.md
atr/: !sbc-boot.atr
builtin/: !sbc-boot.xex  !sbc-filer.xex  !sbc-xex-loader.atr  !xex-loader.atr
config/: build.make  builtin-atr-file-library.make  builtin-atr-library.make  cxx-local.make  cxx.make  fs-builtin-library.make  fs-test-data-files.make  media-disk-library.make  platform-rp.make  qtpy.make  rp2040.make
image/: sd-card-3921920-512B-sectors-gpt_exfat_boot_and_fat_region_and_three_clusters-macos.img  sd-card-3921920-512B-sectors-mbr_exfat_boot_and_fat_region_and_three_clusters-macos.img
src/app/: App.cc  App.h
src/debug/: Pipe.cc  Pipe.h
src/fs/: BlockSize.h  Directory.cc  Directory.h  DirectoryEntry.cc  DirectoryEntry.h  DirectoryEnumerator.cc  DirectoryEnumerator.h  Enumerator.cc  Enumerator.h  File.cc  File.h  FileSlice.cc  FileSlice.h  FileSystem.cc  FileSystem.h  ResolvePath.cc  ResolvePath.h
src/fs/automount/: Manager.cc  Manager.h
src/fs/builtin/: File.cc  File.h  FileSystem.cc  FileSystem.h  Library.cc  Library.h  LibraryEnumerator.h
src/fs/exfat/: AddressTypes.h  BootSector.cc  BootSector.h  ClusterAllocation.h  ClusterChain.cc  ClusterChain.h  ClusterChainEntry.cc  ClusterChainEntry.h  ClusterChainEnumerator.cc  ClusterChainEnumerator.h  ClusterHeap.cc  ClusterHeap.h  ClusterIndexEntry.h  ClusterRun.cc  ClusterRun.h  ClusterRunEntry.h  ClusterRunEnumerator.h  Configuration.cc  Configuration.h  Directory.cc  Directory.h  DirectoryEntryCustomDefinedTypes.h  DirectoryEntryEnumerator.h  DirectoryEntryTypes.h  DirectoryEnumerator.h  File.cc  File.h  FileAttributes.h  FileSystem.cc  FileSystem.h  GenericDirectoryEntry.cc  GenericDirectoryEntry.h  GenericDirectoryEntryCustomDefinedTypes.h  GenericDirectoryEntryTypes.h  InternalDirectory.cc  InternalDirectory.h  InternalDirectoryEntry.cc  InternalDirectoryEntry.h  InternalDirectoryEnumerator.h  LogicalDirectory.cc  (+15 more)
src/fs/exfat/test/: main.cc
src/fs/exfat/test/basic/: bin.make  main.cc
src/fs/exfat/test/enumerate-directory/: bin.make  main.cc
src/fs/exfat/test/read/: bin.make  main.cc
src/fs/gpt/: GPT.cc  GPT.h
src/fs/gpt/test/: bin.make  main.cc
src/fs/mbr/: MBR.cc  MBR.h
src/fs/mbr/test/: bin.make  main.cc
src/fs/ram/: Directory.cc  Directory.h
src/fs/root/: FileSystem.cc  FileSystem.h
src/fs/test/: bin.make  main.cc
src/fs/test/common/: File.cc  File.h
src/hal/: Indicator.h  InputSignal.h  OutputSignal.h  Spi.h  Uart.cc  Uart.h  duration_us.h  misc.h
src/hardware/: InputSignal.cc  InputSignal.h  OutputSignal.cc  OutputSignal.h  misc.h
src/io/: File.cc  File.h  RomFile.cc  RomFile.h  Sink.h
src/keyboard/: App.cc  App.h  Controller.cc  Controller.h  Pipe.cc  Pipe.h
src/keyboard/console/: Controller.cc  Controller.h  KeyBit.h  KeyReleaseObserver.cc  KeyReleaseObserver.h
src/keyboard/pokey/: Controller.cc  Controller.h  InputReport.cc  InputReport.h  KeyCode.h  ModifierCode.h  Traits.h
src/keyboard/usb/: InputReport.cc  InputReport.h  KeyCode.h  ModifierBit.h
src/media/: Atr.cc  Atr.h  BuiltinAtrFileLibrary.h  BuiltinAtrLibrary.h  Disk.cc  Disk.h  DiskLibrary.cc  DiskLibrary.h  DiskLibraryAtr.h  Xex.cc  Xex.h  XexEntry.cc  XexEntry.h  XexEnumerator.cc  XexEnumerator.h
src/media/test/: bin.make  main.cc
src/media/test/basic/: bin.make  main.cc
src/media/test/load-atr/: bin.make  main.cc
src/media/test/scan-xex/: bin.make  main.cc
src/platform/rp/: App.cc  App.h  AppLauncher.h  AppLauncher.inl.h  CMakeLists.txt  NeoPixelSerializeColor.h  tusb_config.h
src/platform/rp/adafruit_qtpy_rp2040/: app.cc
src/platform/rp/pimoroni_pga2350/: app.cc
src/platform/rp/pimoroni_tiny2350/: app.cc
src/platform/rp/waveshare_rp2040_zero/: app.cc
src/platform/rp2040/: App.cc  App.h  AppLauncher.h  AppLauncher.inl.h  CMakeLists.txt  NeoPixelSerializeColor.h  std_atomic_support.cc  tusb_config.h
src/platform/rp2040/adafruit_qtpy_rp2040/: app.cc
src/platform/rp2040/qtpy/: CMakeLists.txt  app.cc  tusb_config.h
src/platform/rp2040/waveshare_rp2040_zero/: app.cc
src/sd/: Block.h  BlockSize.h  CSD.h  Card.cc  Card.h  Command.cc  Command.h  Controller.cc  Controller.fwd.h  Controller.h  Response.h  SdFile.cc  SdFile.h  SpiAccessor.cc  SpiAccessor.h  Traits.h  VHS.h
src/sd/test/: bin.make  main.cc
src/sio/: App.cc  App.h  AtariControl.cc  AtariControl.h  Controller.cc  Controller.h  Device.cc  Device.h  DiskDrive.cc  DiskDrive.h  FileSystem.cc  FileSystem.h  Frame.h  Pipe.cc  Pipe.h  Traits.h  checksum.cc  checksum.h
src/sio/sdr/: DiskDrive.h  FileSystem.h  Types.h
src/sio/test/: bin.make  main.cc
src/thread/: Pipe.h
src/util/: Ascii.cc  Ascii.h  PACKED.h  crc.cc  crc.h  hex.cc  hex.h  type_traits.h
xex/: sbc.xex
